Bug 99709 - GTK3 : Menubar isn't accessible with F6
Summary: GTK3 : Menubar isn't accessible with F6
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0
Keywords: accessibility
Depends on:
Blocks:
 
Reported: 2016-05-06 10:46 UTC by Arnaud Versini
Modified: 2016-10-25 19:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud Versini 2016-05-06 10:46:13 UTC
To reproduce :
- launch LibreOffice with Gtk3 VC,
- navigate in the window by using F6 and go to the menu bar,
- you can't go to the menu bar, you go directly from the and this works with Gtk2 VCL plugin.
Comment 1 Buovjaga 2016-05-07 13:14:47 UTC
Yeah, gtk works while gtk3 doesn't (it just goes to the recent files in Start center).

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.0.alpha1+
Build ID: 540fee2dc7553152914f7f1d8a41921e765087ef
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on April 30th 2016
Comment 2 Caolán McNamara 2016-05-10 08:09:33 UTC
Tricky, I can probably hook something up but the native gtk3 menubar doesn't seem to be really setup to have keyboard focus active without a menu actually popped up
Comment 3 Commit Notification 2016-05-11 11:11:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=43896bcbea44aa92ee80ee7ba6cb39f5f514c751

Resolves: tdf#99709 native gtk3 menubar isn't accessible with F6

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2016-05-11 11:14:26 UTC
I hope this is a useful thing and not a box checking exercise.