Resolves: tdf#99709 native gtk3 menubar isn't accessible with F6

Change-Id: If772231e824e71c327103e147e3eef69e82339f6