vcl/inc/salmenu.hxx
@@ -81,6 +81,7 @@ public:
     virtual void Update() {}
 
     virtual bool CanGetFocus() const { return false; }
+    virtual bool TakeFocus() { return false; }
 
     // TODO: implement show/hide for the Win/Mac VCL native backends
     virtual void ShowItem( unsigned nPos, bool bShow ) { EnableItem( nPos, bShow ); }
